# XPAutoPause

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
